--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ body{
     width: 100%;
     height: auto;
     background-color: #11071F;
-    font-family: calc(--primary-font);
+    font-family: var(--primary-font);
     overflow-x: hidden;
 }
 
