--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,46 @@ p {
 
 
 
+/* ---------- preloader Area Start ------------- */
+
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #ffffff; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  transition: opacity 0.5s ease;
+}
+
+.preloader img {
+  width: 100px; 
+}
+
+.preloader.fade-out {
+  opacity: 0;
+  pointer-events: none;
+}
+
+/* ---------- Preloader Area End ------------- */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* ---------- Header Area Start ------------- */
 
 .nav-area{
@@ -147,7 +187,7 @@ p {
 
 .logo {
     display: inline-block;
-    width: 200px;
+    width: 160px;
     height: 60px;
 }
 
@@ -155,16 +195,6 @@ p {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.logo {
-    display: inline-flex;
-    align-items: center;
-    color: var(--white-color);
-    font-size: 27px;
-    font-weight: var(--bold);
-    text-decoration: none;
-    text-transform: capitalize;
 }
 
 .header-right{
